force-app/main/default/objects/Assessment_Definition_Deployment__c/Assessment_Definition_Deployment__c.object-meta.xml
<CustomObject>
    <label>Assessment Definition Deployment</label>
    <nameField>
        <displayFormat>ADD-{00000}</displayFormat>
        <label>Assessment Definition Deployment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Definition Deployments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>