force-app/main/default/objects/Assessment_Definition_Deployment__c/fields/Assessment_Definition__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Definition__c</fullName>
    <label>Assessment Definition</label>
    <referenceTo>Assessment_Definition__c</referenceTo>
    <relationshipLabel>Assessment Definition Deployments</relationshipLabel>
    <relationshipName>Assessment_Definition_Deployments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>