force-app/main/default/objects/Assessment_Definition_Deployment__c/fields/Deployment_Name__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Name__c</fullName>
    <label>Deployment Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>